--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698433019-business-intelligence-developer-i-junior-level-'>Accolade, Inc. Business Intelligence Developer I (Junior level) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698433019-business-intelligence-developer-i-junior-level-'>Accolade, Inc. Business Intelligence Developer I (Junior level) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plymouth Meeting, PA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -157,7 +157,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-manager-business-intelligence-and-insights-14072'>Senior Manager, Business Intelligence and Insights - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-manager-business-intelligence-and-insights-14072'>Senior Manager, Business Intelligence and Insights - Experian Careers</a></h5> 
 <p><span class="badge badge-light">United States  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -189,7 +189,7 @@
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/o8Vrbfwp'>Capgemini Japan Careers - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/o8Vrbfwp'>Capgemini Japan Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -287,7 +287,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
+<h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -366,7 +366,7 @@ using?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698014933-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698014933-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -398,7 +398,7 @@ using?...</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://paltron1.join.com/jobs/449595-business-intelligence-analyst-m-w-d'>Job @ PALTRON (Aachen): Business Intelligence Anal... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/449595-business-intelligence-analyst-m-w-d'>Job @ PALTRON (Aachen): Business Intelligence Anal... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -419,7 +419,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oTRjbfwY&__jvst=Employee&__jvsd=smqK2hwk&__jvsc=Twitter&bid=nftBhMwR'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oTRjbfwY&__jvst=Employee&__jvsd=smqK2hwk&__jvsc=Twitter&bid=nftBhMwR'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
