--- a/android-engineer.html
+++ b/android-engineer.html
@@ -79,7 +79,7 @@
 <p>Oct 14, 2019 ... We are a leading digital bank on a mission to disrupt the banking industry. We've 
 built an app with smart money management tools to help our customers live a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1918818'>Job Application for Principal, Android Engineer (Delivery Device Service) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1918818'>Job Application for Principal, Android Engineer (Delivery Device Service) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -111,7 +111,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -290,7 +290,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -342,7 +342,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -370,7 +370,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
@@ -378,7 +378,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -420,7 +420,7 @@ Android Platform Engineer at TomTom in  | Android jobs | 42jobs.io
 <p>4 days ago ... Android software engineer at Greenlight, a financial technology company with a 
 mission to help parents teach financial literacy to kids.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1857013'>Job Application for Sr. Android Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1857013'>Job Application for Sr. Android Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
